WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281332
REGRESSION(
284461@main
?) [ iPad ] 4x TestWebKitAPI.DocumentEditingContext.CharacterRectConsistency* (api-tests) are constant timeouts
https://bugs.webkit.org/show_bug.cgi?id=281332
Summary
REGRESSION(284461@main?) [ iPad ] 4x TestWebKitAPI.DocumentEditingContext.Cha...
Dawn Morningstar
Reported
2024-10-11 13:09:39 PDT
TestWebKitAPI.DocumentEditingContext.CharacterRectConsistency TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithRTL TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithRTLAndVerticalText TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithVerticalText These API tests are constantly timing out on iPad after
284461@main
https://commits.webkit.org/284461@main
HISTORY:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.DocumentEditingContext.CharacterRectConsistency&test=TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithRTL&test=TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithRTLAndVerticalText&test=TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithVerticalText
Test-run:
https://build.webkit.org/#/builders/927/builds/3232
STDIO:
https://build.webkit.org/#/builders/927/builds/3232/steps/18/logs/stdio
TIMEOUT: Timeout TestWebKitAPI.DocumentEditingContext.CharacterRectConsistency TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithRTL TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithRTLAndVerticalText TestWebKitAPI.DocumentEditingContext.CharacterRectConsistencyWithVerticalText TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponder 2024-10-11 10:48:03.627 TestWebKitAPI[20858:7137381] Expected the caret to appear
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-11 13:23:20 PDT
<
rdar://problem/137769684
>
Wenson Hsieh
Comment 2
2024-10-11 16:41:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35078
EWS
Comment 3
2024-10-11 22:19:20 PDT
Committed
285060@main
(e1526704268b): <
https://commits.webkit.org/285060@main
> Reviewed commits have been landed. Closing PR #35078 and removing active labels.
Ryan Haddad
Comment 4
2024-10-14 12:59:34 PDT
***
Bug 281331
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug