REGRESSION(284461@main?) [ iPad ] 4x TestWebKitAPI.DocumentEditingContext.CharacterRectConsistency* (api-tests) are constant timeouts https://bugs.webkit.org/show_bug.cgi?id=281332 rdar://137769684

Reviewed by Abrar Rahman Protyasha.

These API tests began to fail on iPadOS after the changes in 284461@main; this is because in the
case where `USE(BROWSERENGINEKIT)` is enabled but the runtime flag for async text input on iPad is
*disabled*, the newly introduced `-[WKTextInteractionWrapper textSelectionDisplayInteraction]`
helper method returns `nil`. This in turn causes `-activateSelection` and `-deactivateSelection` to
become no-ops.

Fix this by preserving the old codepath in the case where `USE(BROWSERENGINEKIT)` is enabled but
`_asyncTextInteraction` is `nil`, by falling back to iterating over the content view's interactions
until we find an instance of `UITextSelectionDisplayInteraction`.

* Source/WebKit/UIProcess/ios/WKTextInteractionWrapper.mm:
(-[WKTextInteractionWrapper textSelectionDisplayInteraction]):

Canonical link: https://commits.webkit.org/285060@main